<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiThreadDownloader</string>

    <string name="btn_dl_start1">Start1</string>
    <string name="btn_dl_stop1">Stop1</string>
    <string name="btn_dl_start2">Start2</string>
    <string name="btn_dl_stop2">Stop2</string>
    <string name="btn_dl_start3">Start3</string>
    <string name="btn_dl_stop3">Stop3</string>
    <string name="btn_dl_start4">Start4</string>
    <string name="btn_dl_stop4">Stop4</string>
    <string name="btn_dl_start5">Start5</string>
    <string name="btn_dl_stop5">Stop5</string>
    <string name="btn_dl_start6">Start6</string>
    <string name="btn_dl_stop6">Stop6</string>

    <string name="btn_dl_notify1">Notify1</string>
    <string name="btn_dl_notify2">Notify2</string>
    <string name="btn_dl_notify3">Notify3</string>
    <string name="btn_dl_notify4">Notify4</string>
    <string name="btn_dl_notify5">Notify5</string>
    <string name="btn_dl_notify6">Notify6</string>

</resources>
