<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start1" />

            <Button
                android:id="@+id/main_dl_stop_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop1" />

            <ProgressBar
                android:id="@+id/main_dl_pb1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start2" />

            <Button
                android:id="@+id/main_dl_stop_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop2" />

            <ProgressBar
                android:id="@+id/main_dl_pb2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start3" />

            <Button
                android:id="@+id/main_dl_stop_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop3" />

            <ProgressBar
                android:id="@+id/main_dl_pb3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start4" />

            <Button
                android:id="@+id/main_dl_stop_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop4" />

            <ProgressBar
                android:id="@+id/main_dl_pb4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start5" />

            <Button
                android:id="@+id/main_dl_stop_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop5" />

            <ProgressBar
                android:id="@+id/main_dl_pb5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dl_start_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dl_start6" />

            <Button
                android:id="@+id/main_dl_stop_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_dl_stop6" />

            <ProgressBar
                android:id="@+id/main_dl_pb6"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/main_dl_start_btn6" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_notify_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify1" />

            <Button
                android:id="@+id/main_notify_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify2" />

            <Button
                android:id="@+id/main_notify_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify3" />

            <Button
                android:id="@+id/main_notify_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify4" />

            <Button
                android:id="@+id/main_notify_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify5" />

            <Button
                android:id="@+id/main_notify_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8sp"
                android:text="@string/btn_dl_notify6" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>